[package]
name = "git-repo-clone"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "grc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.9"
skim = "*"
regex = "1.5"
serde = "*"
serde_json = "*"
serde_derive = "*"
reqwest = { version = "0.11", features = ["blocking"] }
toml = "0.5"

[profile.release]
debug = true

