[package]
name = "git-repo-clone"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "grc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.9"
skim = "0.9.4"
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
confy = "0.4"
