[package]
name = "git-repo-clone"
version = "0.2.0"
authors = ["Jared Moulton <jaredmoulton3@gmail.com>"]
edition = "2021"
license = "MIT"
description = """
Git Repo Clone is a command line utility written in rust that leverages the
power of fuzzy finding with searching git hosts
"""
homepage = "https://github.com/jrmoulton/git-repo-clone"
repository = "https://github.com/jrmoulton/git-repo-clone"
documentation  = "https://docs.rs/crate/git-repo-clone/latest"
keyword = ["git", "clone", "fuzzy", "github"]
exclude = [
    "images/*"
]

[[bin]]
name = "grc"
path = "src/main.rs"

[dependencies]
clap = "3.1.9"
skim = "0.9.4"
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
confy = "0.4"
